--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
 			<version>1.23.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
