--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 avatars.directory=D:/avatars_temp
+spring.liquibase.enabled=false
+server.port = 8080
